some change for google web indexing

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -7,6 +7,12 @@
       name="description"
       content="FamilyNest: Create and manage your collaborative family tree. An open-source, free, and self-hostable project."
     />
+    {% if google_site_verification %}
+    <meta
+      name="google-site-verification"
+      content="{{google_site_verification}}"
+    />
+    {% endif %}
 
     <title data-t="LANDING_PAGE.TITLE">
       FamilyNest - Your collaborative family tree
