add favicon to each page and change favicon function name

--- a/templates/account.html
+++ b/templates/account.html
@@ -9,6 +9,7 @@
     />
 
     <title data-t="ACCOUNT_PAGE.TITLE">My Account - FamilyNest</title>
+    <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/static/styles/account.css" />
 
     <script defer src="/static/scripts/translation.js"></script>
