--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,6 +9,7 @@
     />
 
     <title data-t="CONTACT_PAGE.TITLE">Contact - FamilyNest</title>
+    <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/static/styles/contact.css" />
 
     <script defer src="/static/scripts/translation.js"></script>
