--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,7 @@
     />
 
     <title data-t="HOME_PAGE.TITLE">Home - FamilyNest</title>
+    <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/static/styles/home.css" />
     <script
       defer
