--- a/templates/invalid_link.html
+++ b/templates/invalid_link.html
@@ -9,6 +9,7 @@
     />
 
     <title data-t="INVALID_LINK_PAGE.TITLE">Invalid Link - FamilyNest</title>
+    <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/static/styles/invalid_link.css" />
 
     <script defer src="/static/scripts/translation.js"></script>
