--- a/templates/landing.html
+++ b/templates/landing.html
@@ -7,6 +7,8 @@
       name="description"
       content="FamilyNest: Create and manage your collaborative family tree. An open-source, free, and self-hostable project."
     />
+    <meta name="keywords" content="FamilyNest, collaborative family tree" />
+    <meta name="author" content="PaulExplorer" />
     {% if google_site_verification %}
     <meta
       name="google-site-verification"
@@ -17,6 +19,8 @@
     <title data-t="LANDING_PAGE.TITLE">
       FamilyNest - Your collaborative family tree
     </title>
+    <link rel="icon" href="/favicon.ico" />
+
     <link rel="stylesheet" href="/static/styles/landing.css" />
     <script defer src="/static/scripts/translation.js"></script>
     <script>
