--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,7 @@
       name="description"
       content="Login or sign up to FamilyNest to create and manage your collaborative family trees. Open-source, free, and self-hostable."
     />
+    <link rel="icon" href="/favicon.ico" />
 
     <link rel="stylesheet" href="/static/styles/login.css" />
     <script
