--- a/templates/privacy_policy.html
+++ b/templates/privacy_policy.html
@@ -11,6 +11,8 @@
     <title data-t="PRIVACY_POLICY_PAGE.TITLE">
       Privacy Policy - FamilyNest
     </title>
+    <link rel="icon" href="/favicon.ico" />
+    
     <link rel="stylesheet" href="/static/styles/legal_text.css" />
     <script defer src="/static/scripts/translation.js"></script>
     <script>
