--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -6,6 +6,7 @@
     <title data-t="RESET_PASSWORD_PAGE.TITLE">
       Reset Password - FamilyNest
     </title>
+    <link rel="icon" href="/favicon.ico" />
     <meta
       name="description"
       content="Reset your password for your FamilyNest account."
