--- a/templates/terms_of_service.html
+++ b/templates/terms_of_service.html
@@ -7,6 +7,7 @@
       name="description"
       content="Terms of Service for FamilyNest, an open-source, free, and self-hostable collaborative family tree project."
     />
+    <link rel="icon" href="/favicon.ico" />
 
     <title data-t="TERMS_OF_SERVICE_PAGE.TITLE">
       Terms of Service - FamilyNest
