--- a/templates/legal_notice.html
+++ b/templates/legal_notice.html
@@ -9,6 +9,7 @@
     />
 
     <title data-t="LEGAL_NOTICE_PAGE.TITLE">Legal Notice - FamilyNest</title>
+    <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/static/styles/legal_text.css" />
     <script defer src="/static/scripts/translation.js"></script>
     <script>
